# retty

./: Cargo.toml  LICENSE  README.md  codecov.yml  go.mod  retty.go
.github/workflows/: grcov.yml  retty.yml
channel/: context.go  context_impl.go  context_impl_inbound.go  context_impl_outbound.go  handler.go  handler_context.go  inbound_context_impl.go  outbound_context_impl.go  pipeline.go  pipeline_context.go
examples/: chat_server_tcp.rs  chat_server_udp.rs  client_tcp.rs  client_udp.rs  echo_client.rs  echo_server.rs  echo_server_tcp.rs  echo_server_udp.rs  echo_tcp_client.rs  echo_tcp_server.rs  echo_udp_client.rs  echo_udp_server.rs
examples/async_io/chat/: chat_client_udp_ecn.rs  chat_server_udp_ecn.rs  chat_tcp_client.rs  chat_udp_ecn_server.rs
examples/async_io/echo/: echo_client_tcp.rs  echo_client_udp.rs  echo_server_tcp.rs  echo_server_udp.rs  echo_udp_client.rs  echo_udp_server.rs
examples/chat/: chat_client_tcp.rs  chat_client_udp.rs  chat_server_tcp.rs  chat_server_udp.rs  chat_tcp_client.rs  chat_tcp_server.rs  chat_udp_ecn_client.rs  chat_udp_ecn_server.rs
examples/echo/: echo_client_tcp.rs  echo_client_udp.rs  echo_server_tcp.rs  echo_server_udp.rs  echo_tcp_client.rs  echo_tcp_server.rs  echo_udp_client.rs  echo_udp_server.rs
examples/echo_server/: echo_server.go
examples/metal_io/echo/: echo_client_tcp.rs  echo_client_udp.rs  echo_server_tcp.rs  echo_server_udp.rs
examples/mio/: mio_udp_client.rs  mio_udp_server.rs
examples/sans-io/: sans_io_udp_client.rs  sans_io_udp_server.rs
examples/sync-io/: sync_io_udp_client.rs  sync_io_udp_server.rs
examples/telnet/: telnet_client.rs  telnet_server.rs
examples/todo/: chat_server_tcp.rs  chat_server_udp.rs  client_tcp.rs  client_udp.rs  echo_server_tcp.rs  echo_server_udp.rs
retty/: README.md
retty-io/: Cargo.toml  LICENSE-APACHE  README.md
retty-io/src/: blocking.rs  builder.rs  lib.rs  runtime.rs
retty-io/src/buf/: io_buf.rs  slice.rs
retty-io/src/driver/: mod.rs  op.rs  shared_fd.rs  util.rs
retty-io/src/driver/legacy/: mod.rs
retty-io/src/driver/op/: accept.rs  close.rs  connect.rs  fsync.rs  open.rs  poll.rs  read.rs  recv.rs  send.rs  splice.rs  write.rs
retty-io/src/fs/: file.rs  open_options.rs
retty-io/src/io/util/: split.rs
retty-io/src/macros/: join.rs  pin.rs  select.rs  try_join.rs
retty-io/src/net/: mod.rs  udp.rs
retty-io/src/net/tcp/: listener.rs  stream.rs
retty-io/src/net/unix/: pipe.rs  stream.rs
retty-io/src/task/: harness.rs  state.rs  waker.rs
retty-io/src/time/: error.rs  instant.rs  interval.rs  mod.rs
retty-io/src/time/driver/: handle.rs  sleep.rs
retty-io/src/utils/: mod.rs
retty-io/tests/: fs_file.rs  tcp_accept.rs  tcp_connect.rs  tcp_echo.rs  tcp_into_split.rs  tcp_split.rs  udp.rs  uds_cred.rs  uds_split.rs  uds_stream.rs  zero_copy.rs
retty-macros/: Cargo.toml  LICENSE-MIT  README.md
retty-macros/src/: entry.rs  lib.rs
retty/src/: lib.rs
retty/src/bootstrap/: bootstrap_client_tcp.rs  mod.rs
retty/src/channel/: handler_internal.rs  pipeline.rs
retty/src/codec/: mod.rs
src/: error.rs  lib.rs
src/bootstrap/: bootstrap_client_tcp.rs  bootstrap_client_udp.rs  bootstrap_client_udp_ecn.rs  bootstrap_server_tcp.rs  bootstrap_server_udp.rs  bootstrap_tcp_client.rs  bootstrap_tcp_server.rs  bootstrap_test.rs  bootstrap_udp_client.rs  bootstrap_udp_server.rs  client_bootstrap_tcp.rs  client_bootstrap_udp.rs  mod.rs  server_bootstrap_tcp.rs  server_bootstrap_udp.rs
src/bootstrap/async_bootstrap/: async_bootstrap_test.rs  bootstrap_tcp_client.rs  bootstrap_udp_server.rs  mod.rs
src/bootstrap/async_io/: bootstrap_client_tcp.rs  bootstrap_client_udp.rs  bootstrap_client_udp_ecn.rs  bootstrap_server_tcp.rs  bootstrap_server_udp.rs  bootstrap_server_udp_ecn.rs  bootstrap_tcp_client.rs  bootstrap_tcp_server.rs  bootstrap_test.rs  bootstrap_udp_client.rs  bootstrap_udp_ecn_client.rs  bootstrap_udp_ecn_server.rs  bootstrap_udp_server.rs  mod.rs
src/bootstrap/bootstrap_tcp/: bootstrap_tcp_client.rs  bootstrap_tcp_server.rs  mod.rs
src/bootstrap/bootstrap_udp/: bootstrap_udp_client.rs  bootstrap_udp_server.rs  mod.rs
src/bootstrap/metal_io/: bootstrap_client_tcp.rs  bootstrap_client_udp.rs  bootstrap_client_udp_ecn.rs  bootstrap_server_tcp.rs  bootstrap_server_udp.rs  bootstrap_server_udp_ecn.rs  bootstrap_tcp_client.rs  bootstrap_udp_client.rs  bootstrap_udp_ecn_server.rs  bootstrap_udp_server.rs  mod.rs
src/bootstrap/sans_io/: bootstrap_tcp_client.rs  bootstrap_tcp_server.rs  bootstrap_udp_client.rs  bootstrap_udp_ecn_client.rs  bootstrap_udp_ecn_server.rs  bootstrap_udp_server.rs  mod.rs
src/bootstrap/sansio_bootstrap/: bootstrap_tcp_client.rs  bootstrap_tcp_server.rs  bootstrap_udp_client.rs  bootstrap_udp_server.rs
src/bootstrap/sync_io/: bootstrap_udp_client.rs  bootstrap_udp_server.rs  mod.rs
src/channel/: channel_test.rs  handler.rs  handler_internal.rs  mod.rs  pipeline.rs  pipeline_internal.rs
src/channel/async_channel/: async_channel_test.rs  handler.rs  handler_internal.rs  pipeline.rs
src/channel/async_io/: channel_test.rs  handler.rs  handler_internal.rs  mod.rs  pipeline.rs
src/channel/metal_io/: handler.rs  handler_internal.rs  mod.rs  pipeline.rs
src/channel/pipeline/: mod.rs  pipeline_test.rs
src/channel/sans_io/: handler.rs  pipeline.rs
src/channel/sansio_channel/: handler.rs  handler_internal.rs  pipeline.rs
src/channel/sync_io/: handler.rs  pipeline.rs
src/codec/: async_write_tcp_handler.rs  byte_to_message_decoder.rs  line_based_frame_decoder.rs  mod.rs  string_codec.rs
src/codec/byte_to_message_decoder/: line_based_frame_decoder.rs  mod.rs  tagged.rs
src/codec/string_codec/: mod.rs  tagged.rs
src/executor/: mod.rs
src/runtime/: async_std.rs  mod.rs  tokio.rs
src/transport/: async_transport.rs  async_transport_tcp.rs  async_transport_udp.rs  mod.rs  transport_test.rs
src/transport/async_io/: async_transport_test.rs  async_transport_udp.rs  async_transport_udp_ecn.rs  mod.rs
src/transport/async_transport/: async_transport_test.rs  (+1 more)
tests/: echo_test.rs  echo_udp.rs
(+11 files in other folders)
